EVA-4 Refactor: Se elimina código innecesario y se modifica linea a español.

--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -206,10 +206,9 @@
                      language: {
                         buttons: {
                             copyTitle: 'Copiado al portapapeles',
-                            copyKeys: 'Appuyez sur <i>ctrl</i> ou <i>\u2318</i> + <i>C</i> pour copier les données du tableau à votre presse-papiers. <br><br>Pour annuler, cliquez sur ce message ou appuyez sur Echap.',
                             copySuccess: {
                                 _: '%d líneas copiadas',
-                                1: '1 ligne copiée',
+                                1: '1 línea copiada',
 
                             },
 
