EVA-8 feat: Se incluyen plantillas para visualizar en el menú lateral  el módulo de contratos.

--- a/Proyectos/templates/Proyectos/_common/base_proyectos.html
+++ b/Proyectos/templates/Proyectos/_common/base_proyectos.html
@@ -1,4 +1,4 @@
-{#{% extends 'EVA/_common/base.html' %}#}
-{#{% block menu_aplicacion %}#}
-{#    {% include 'Administracion/_common/menu_aplicacion.html' %}#}
-{#{% endblock %}#}
+{% extends 'EVA/_common/base.html' %}
+{% block menu_aplicacion %}
+    {% include 'Proyectos/_common/menu_aplicacion.html' %}
+{% endblock %}
