--- a/Proyectos/templates/Proyectos/_common/menu_aplicacion.html
+++ b/Proyectos/templates/Proyectos/_common/menu_aplicacion.html
@@ -1,6 +1,6 @@
-{# <li>#}
-{#        <a href="{% url 'Administracion:terceros' %}" title="Terceros" data-filter-tags="terceros">#}
-{#            <i class="far fa-handshake"></i>#}
-{#            <span class="nav-link-text" data-i18n="nav.th_terceros">Terceros</span>#}
-{#        </a>#}
-{#    </li>#}
+ <li>
+        <a href="{% url 'Proyectos:contratos' %}" title="Contratos" data-filter-tags="contratos">
+            <i class="far fa-file-alt"></i>
+            <span class="nav-link-text" data-i18n="nav.th_terceros">Contratos</span>
+        </a>
+    </li>
