EVA-8 refactor: Se asigna plantilla base para proyectos.

--- a/Proyectos/templates/Proyectos/index.html
+++ b/Proyectos/templates/Proyectos/index.html
@@ -1,4 +1,4 @@
-{% extends 'EVA/_common/base.html' %}
+{% extends 'Proyectos/_common/base_proyectos.html' %}
 {% load static %}
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
