--- a/Proyectos/templates/Proyectos/Contrato/crear.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
 {% endblock %}
+
 {% block main %}
 
 <div class="panel-container show">
@@ -18,15 +20,12 @@
              <br>
              <br>
          </h1>
-
     </div>
     <div class="row">
         <div class="col-xl-12">
             <div id="panel-1" class="panel">
-
                 <div class="panel-container show">
                     <div class="panel-content">
-
                         <div class="panel-group">
                             <div class="panel-body">
                                 {% if error %}
@@ -44,9 +43,11 @@
                                              <div class="col-md-6">
                                                 <label for="cliente_select">Cliente</label>
                                                 <select class="select2 form-control w-100 select2-selection--single" id="cliente_select" name="cliente_id" required>
-                                                    <option value="" >Seleccione un Tipo de Cliente</option>
+                                                    <option value="" >Seleccione un Cliente</option>
                                                     {% for tercero in terceros %}
-                                                        <option value="{{ tercero.id }}" {% if tercero.id == tercero.cliente_id %} selected {% endif %}>{{ tercero.nombre }}</option>
+                                                        {% if tercero.tipo_tercero.nombre.lower == 'cliente' %}
+                                                        <option value="{{ tercero.id }}" {% if tercero.id == contrato.cliente.id %} selected {% endif %}>{{ tercero.nombre }}</option>
+                                                        {% endif %}
                                                     {% endfor %}
                                                 </select>
                                               </div>
@@ -54,81 +55,79 @@
                                                 <label for="contrato_numero">Número de contrato</label>
                                                 <input class="form-control" id="contrato_numero" type="text" name="numero_contrato" placeholder="Ingrese el número del contrato" required maxlength="20" value="{{ contrato.numero_contrato }}">
                                             </div>
-
                                             <div class="col-md-6">
                                                 <br>
-                                                <label for="contrato_anho">Año</label>
-                                                <input class="form-control" id="contrato_anho" type="text" name="anho" placeholder="Ingrese el año" required maxlength="20" value="{{ contrato.anho }}">
+                                                <label for="rango_anho_select">Año</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" type="number" id="rango_anho_select" name="rango_anho" required>
+                                                    <option value="" >Seleccione un año</option>
+                                                    {% for anho in rango_anho %}
+                                                        <option value="{{ anho }}" {% if anho == contrato.anho %}selected{% endif %}>{{ anho }}</option>
+                                                    {% endfor %}
+                                                </select>
                                             </div>
-                                             <div class="col-md-6">
+                                            <div class="col-md-6">
                                                  <br>
                                                 <label for="contrato_supervisor_nombre">Nombre del supervisor</label>
                                                 <input class="form-control" id="contrato_supervisor_nombre" type="text" name="supervisor_nombre" placeholder="Ingrese el nombre del supervisor" required maxlength="100" value="{{ contrato.supervisor_nombre }}">
                                             </div>
-
-                                             <div class="col-md-6">
+                                            <div class="col-md-6">
                                                 <br>
-                                                <label for="tipo_identificacion_select">Tipo de Identificación</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
-                                                    <option value="" >Seleccione un Tipo de Identificación</option>
-                                                    {% for tipo_id in tipo_identificacion %}
-                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                <label for="contrato_telefono_supervisor">Teléfono del supervisor</label>
+                                                <input class="form-control" id="contrato_telefono_supervisor" type="text" name="supervisor_telefono" placeholder="Ingrese el número telefónico del supervisor" required maxlength="20" value="{{ contrato.supervisor_telefono }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="contrato_correo_supervisor">Correo electrónico del supervisor</label>
+                                                <input class="form-control" id="contrato_correo_supervisor" type="email" name="supervisor_correo" placeholder="Ingrese el correo electrónico del supervisor" maxlength="100" value="{{ contrato.supervisor_correo }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                 <br>
+                                                <label for="contrato_residente">Nombre del residente</label>
+                                                <input class="form-control" id="contrato_residente" type="text" name="residente" placeholder="Ingrese el nombre del residente" required maxlength="100" value="{{ contrato.residente }}">
+                                            </div>
+                                             <div class="col-md-6">
+                                                 <br>
+                                                <label for="fecha_inicio">Fecha de inicio</label>
+                                                <input class="form-control" id="fecha_inicio" name="fecha_inicio" placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_inicio }}" required>
+                                            </div>
+                                             <div class="col-md-6">
+                                                 <br>
+                                                <label for="fecha_terminacion">Fecha de terminación</label>
+                                                <input class="form-control" id="fecha_terminacion" name="fecha_terminacion" placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_terminacion  }}" required>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="contrato_valor">Valor</label>
+                                                <input class="form-control" id="contrato_valor" type="text" name="valor" placeholder="Ingrese el valor del contrato" required maxlength="20" value="{{ contrato.valor }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="contrato_periocidad_informes">Periocidad de informes</label>
+                                                <input class="form-control" id="contrato_periocidad_informes" type="text" name="periocidad_informes" placeholder="Ingrese la periocidad de los informes" required maxlength="20" value="{{ contrato.periocidad_informes }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="contrato_tiempo">Tiempo</label>
+                                                <input class="form-control" id="contrato_tiempo" type="text" name="tiempo" placeholder="Ingrese el tiempo" required maxlength="20" value="{{ contrato.tiempo }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="tipo_contrato_select">Tipo de contrato</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_contrato_select" name="tipo_contrato_id" required>
+                                                    <option value="" >Seleccione un Tipo de Contrato</option>
+                                                    {% for tipo_contrato in tipo_contratos %}
+                                                        <option value="{{ tipo_contrato.id }}" {% if tipo_contrato.id == contrato.tipo_contrato_id %} selected {% endif %}>{{ tipo_contrato.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                              </div>
+                                            </div>
                                             <div class="col-md-6">
-                                             <br>
+                                                <br>
                                                 <label for="empresa_select">Empresa</label>
                                                 <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
-                                                    <option value="" >Seleccione una empresa</option>
-                                                    {% for tipo_id in empresas %}
-                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                    <option value="" >Seleccione una Empresa</option>
+                                                    {% for empresa in empresas %}
+                                                        <option value="{{ empresa.id }}" {% if empresa.id == contrato.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
                                                     {% endfor %}
-                                                </select>
-                                            </div>
-
-                                            <div class="col-md-6">
-                                             <br>
-                                                <label for="tipo_terceros_select">Tipo Terceros</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_terceros_select" name="tipo_tercero_id" required>
-                                                    <option value="" >Seleccione un Tipo de Tercero</option>
-                                                    {% for tipo_id in tipo_terceros %}
-                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-
-                                            <div class="col-md-6">
-                                             <br>
-                                                <label for="centro_poblado_select">Departamento</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
-                                                    <option value="" >Seleccione un Departamento</option>
-                                                   {% for departamento in departamentos %}
-                                                        <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-
-                                            <div class="col-md-6">
-                                             <br>
-                                                <label for="centro_poblado_select">Municipio</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
-                                                    <option value="" >Seleccione un Municipio</option>
-                                                    {% for municipio in municipios %}
-                                                        <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-
-                                            <div class="col-md-6">
-                                             <br>
-                                                <label for="centro_poblado_select">Centro Poblado</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
-                                                    <option value="" >Seleccione un Centro Poblado</option>
-                                                     {% for c_poblado in c_poblados %}
-                                                        <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
-                                                    {% endfor %}
-
                                                 </select>
                                             </div>
 
@@ -152,10 +151,9 @@
     </div>
 </div>
 
-
 {% endblock %}
-{% block scripts %}
 
+{% block scripts %}
 
 <script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
@@ -164,6 +162,8 @@
 <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
+<script src="{% static 'Proyectos/js/Contratos/date_picker.js' %}"></script>
     <script>
 		$(document).ready(function () {
 			$(function() {
