--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -37,8 +37,8 @@
                                                 <table class="table table-bordered w-100" id="dataTable">
                                                     <thead>
                                                         <tr>
-                                                            <th>Número de contrato</th>
                                                             <th>Cliente</th>
+                                                            <th>Número de contrato</th>
                                                             <th>Año</th>
                                                             <th>Nombre del supervisor</th>
                                                             <th>Teléfono del supervisor</th>
@@ -57,8 +57,8 @@
                                                     <tbody>
                                                         {% for contrato in contratos %}
                                                             <tr>
-                                                                <td>{{ contrato.numero_contrato }}</td>
                                                                 <td>{{ contrato.cliente}}</td>
+                                                                <td>{{ contrato.numero_contrato }}</td>
                                                                 <td>{{ contrato.anho}}</td>
                                                                 <td>{{ contrato.supervisor_nombre }}</td>
                                                                 <td>{{ contrato.supervisor_telefono }}</td>
@@ -67,15 +67,13 @@
                                                                 <td>{{ contrato.fecha_inicio|date:'Y-m-d H:i' }}</td>
                                                                 <td>{{ contrato.fecha_terminacion|date:'Y-m-d H:i' }}</td>
                                                                 <td>{{ contrato.valor }}</td>
-                                                                <td>{{ contrato.valor }}</td>
                                                                 <td>{{ contrato.periocidad_informes }}</td>
                                                                 <td>{{ contrato.tiempo }}</td>
                                                                 <td>{{ contrato.tipo_contrato }}</td>
                                                                 <td>{{ contrato.empresa }}</td>
                                                               <td>
-                                                                    <a class="far fa-2x fa-edit"  href="{% url 'Administracion:terceros-editar' tercero.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                                                                    <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ tercero.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ tercero.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
-
+                                                                    <a class="far fa-2x fa-edit"   href="{% url 'Proyectos:contratos-editar' contrato.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                    <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ contrato.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminarContrato({{ contrato.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                               </td>
                                                             </tr>
                                                         {% endfor %}
@@ -93,12 +91,12 @@
     </div>
 
 
-    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='administracion/terceros' %}
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='proyectos/contratos' %}
 {% endblock %}
 {% block scripts %}
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/notifications/sweetalert2/sweetalert2.bundle.js' %}"></script>
-    <script src="{% static 'Administracion/js/confirmarEliminar.js' %}"></script>
+    <script src="{% static 'Proyectos/js/Contratos/confirmarEliminarContrato.js' %}"></script>
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
