EVA-8 refactor: Se eliminan espacios entre lineas del código y se cambia el nombre del botón guardar por actualizar.

--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -16,7 +16,6 @@
              <br>
              <br>
          </h1>
-
     </div>
     <div class="row">
         <div class="col-xl-12">
@@ -42,7 +41,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <div class="form-row">
                                             <div class="col-md-6">
@@ -66,12 +64,9 @@
 
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <div class="form-row">
-
                                             <div class="col-md-6">
-
                                                 <label for="cargo_select">Tipo Terceros</label>
                                                 <select class="select2 form-control w-100 select2-selection--single" id="tipo_select" name="tipo_tercero_id" required>
                                                     <option value="" >Seleccione un Tipo de Tercero</option>
@@ -81,7 +76,6 @@
                                                 </select>
                                             </div>
                                              <div class="col-md-6">
-
                                                 <label for="departamento_select">Departamento</label>
                                                 <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="departamento_id" required>
                                                     <option value="" >Seleccione un Departamento</option>
@@ -127,7 +121,7 @@
                                     </div>
                                     <div class="form-row">
                                         <div >
-                                            <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
+                                            <button id="guardar" class="btn btn-primary btn-block">Actualizar</button>
                                         </div>
                                         <div style="padding-left: 15px">
                                             <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
