EVA-8 refactor: Se cambia el nombre del botón guardar por actualizar.

--- a/Proyectos/templates/Proyectos/Contrato/editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/editar.html
@@ -135,7 +135,7 @@
                                     </div>
                                     <div class="form-row">
                                         <div>
-                                            <button id="agregar" class="btn btn-primary btn-block">Agregar</button>
+                                            <button id="agregar" class="btn btn-primary btn-block">Actualizar</button>
                                         </div>
                                         <div style="padding-left: 15px">
                                             <a href="{% url 'Proyectos:contratos' %}" class="btn btn-danger btn-block">Cancelar</a>
